# ExamenParcial2

./: CMakeLists.txt  README.md
Ejercicio1Num/: Ejercicio1.cpp  Ejercicio1.h
Ejercicio2Dia/: Ejercicio2.cpp  Ejercicio2.h
Ejercicio3Prom/: Ejercicio3.cpp  Ejercicio3.h
Ejercicio4Tien/: Ejercicio4.cpp  Ejercicio4.h
